# pick-play

./: Cargo.toml  Dockerfile  README.md  Shuttle.toml  tailwind.config.js
axum-ctx/: Cargo.toml  LICENSE.txt  README.md  justfile
axum-ctx/src/: lib.rs
axum-ctx/tests/: itests.rs
joes-book/: Cargo.toml
joes-book/src/: main.rs
pick-play/: Cargo.toml
pick-play/.sqlx/: query-0bdf51461cce955e6989d638a309c3d6955186dce1016a1dddc4fb326d40cd38.json  query-106872105512b15a39e8689748cb163335f8919f2016a7d5b5890106a4f14a74.json  query-1645a2ae6485cdd6c43fea98d63a4e49f90f49ae17fea3cf99a3078b0e396e6d.json  query-35bcab6026db73a149f466adce37293aa8416e1a2ee8d40605bcd1b6864e9f6b.json  query-39ab6abafd7e81e4fab22d54f740a3ab13d25d8c1c369b647bb80243762c81c2.json  query-437dbb5742b7b01d0d60f0987dd31e5a23f9dc4ceb8d79340295ba84e39903e8.json  query-74700965bd265bb0cd96d5beb08da6666bca0cda46c2444cf84157a925d4a353.json  query-7cf644403c4c62d9f29f29d947942c6fe1251d71ad03274c49bbdd3cbd7dda86.json  query-7f7ae95d9a48afe177af0341feb27e9013c6ab04d3f9eab2fcc8a8b275733cd8.json  query-85f5fb429f6990212f8d1405a7c7f18144ed332fbde1b3c42582a21005e5e539.json  query-8be20fbdaa446a543f66c3008636961995658e40b44e10270a2b30c8e911d8ef.json  query-91e33e5be8df58edbc127d6c479ea4bb503de457924a638d8aa5904529e68d9e.json  query-9a8e8b048f271346122d0400157396445bd3935a8bbf22a56aa6c7ba5a062292.json  query-a69c032cf09c6fa6b93927cb73ebc5e59a5dbc6c92f425e79404bdcc8898ce8f.json  query-b102e98cf00c1e58027280cf60a79440fc4e4bee75f992f7a2d2f92dd6824f7e.json  (+4 more)
public/: manifest.json
style/: input.css  output.css
(+58 files in other folders)
