[package]
name = "axum-ctx"
description = "Error handling in Axum inspired by anyhow"
version = "0.4.0"
authors = ["Mo Bitar <mo8it@proton.me>"]
repository = "https://codeberg.org/mo8it/axum-ctx"
license = "AGPL-3.0"
keywords = ["axum", "error", "error-handling"]
edition = "2021"
include = [
  "/src/",
  "/LICENSE.txt",
  "/README.md",
]

[dependencies]
axum-core = "0.5.0"
http = "1.1.0"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }

[dev-dependencies]
anyhow = "1.0.83"
axum = { version = "0.8.1", default-features = false, features = ["json"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
